--- a/AdSanare.MVC/appsettings.json
+++ b/AdSanare.MVC/appsettings.json
@@ -1,6 +1,6 @@
  {
   "ConnectionStrings": {
-    "AdSanare": "Data Source=DESKTOP-GNKJSJ7\\SQLEXPRESS;Initial Catalog=AdSanare;Persist Security Info=False;Integrated Security=SSPI;"
+    "AdSanare": "Server=localhost\\;Database=AdSanare;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
