--- a/AdSanare.Repository.Interfaces/AdSanare.Repository.Interfaces.csproj
+++ b/AdSanare.Repository.Interfaces/AdSanare.Repository.Interfaces.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AdSanare.Entities\AdSanare.Entities.csproj" />
   </ItemGroup>
 
