--- a/AdSanare.Seguridad/appsettings.json
+++ b/AdSanare.Seguridad/appsettings.json
@@ -1,6 +1,6 @@
- {
+{
     "ConnectionStrings": {
-        "AdSanare": "Data Source=desktop-gnkjsj7\\sqlexpress;Initial Catalog=AdSanare;Integrated Security=True"
+        "DefaultConnection": "Data Source=desktop-gnkjsj7\\sqlexpress;Initial Catalog=AdSanare_Seguridad;Integrated Security=True"
     },
   "Logging": {
     "LogLevel": {
