--- a/AdSanare.Core/appsettings.json
+++ b/AdSanare.Core/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "AdSanareCoreDbContextConnection": "Data Source=desktop-gnkjsj7\\sqlexpress;Initial Catalog=AdSanare_Core;Integrated Security=True"
-    }
+  "ConnectionStrings": {
+    "AdSanare": "Data Source=localhost\\;Initial Catalog=AdSanare;Integrated Security=True",
+    "AdSanareUsuarios": "Data Source=localhost\\;Initial Catalog=AdSanareUsuarios;Integrated Security=True"
+  }
 }
