--- a/AdSanare.Core/AdSanare.Core.csproj
+++ b/AdSanare.Core/AdSanare.Core.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="4.5.2" />
     <PackageReference Include="bootstrap.sass" Version="4.5.2" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
@@ -28,6 +29,7 @@
     <ProjectReference Include="..\AdSanare.Repository\AdSanare.Repository.csproj" />
     <ProjectReference Include="..\AdSanare.UnitOfWork.Interfaces\AdSanare.UOW.Interfaces.csproj" />
     <ProjectReference Include="..\AdSanare.UnitOfWork\AdSanare.UOW.csproj" />
+    <ProjectReference Include="..\AdSanare.Validation\AdSanare.Validation.csproj" />
   </ItemGroup>
 
 </Project>
