Creación de Roles

--- a/AdSanare.Core/appsettings.json
+++ b/AdSanare.Core/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "AdSanare": "Data Source=localhost\\;Initial Catalog=AdSanare;Integrated Security=True",
-    "AdSanareUsuarios": "Data Source=localhost\\;Initial Catalog=AdSanareUsuarios;Integrated Security=True"
-  }
+    "ConnectionStrings": {
+        "AdSanare": "Data Source=desktop-gnkjsj7\\sqlexpress;Initial Catalog=AdSanare;Integrated Security=True",
+        "AdSanareUsuarios": "Data Source=desktop-gnkjsj7\\sqlexpress;Initial Catalog=AdSanareUsuarios;Integrated Security=True"
+    }
 }
