--- a/AdSanare.Core/appsettings.json
+++ b/AdSanare.Core/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "AdSanare": "Data Source=localhost\\;Initial Catalog=AdSanare;Integrated Security=True; MultipleActiveResultSets=true;",
-        "AdSanareUsuarios": "Data Source=localhost\\;Initial Catalog=AdSanareUsuarios;Integrated Security=True; MultipleActiveResultSets=true;"
+        "AdSanare": "Data Source=desktop-gnkjsj7\\sqlexpress;Initial Catalog=AdSanare;Integrated Security=True; MultipleActiveResultSets=true;",
+        "AdSanareUsuarios": "Data Source=desktop-gnkjsj7\\sqlexpress;Initial Catalog=AdSanareUsuarios;Integrated Security=True; MultipleActiveResultSets=true;"
     }
 }
