--- a/AdSanare.Core/AdSanare.Core.csproj
+++ b/AdSanare.Core/AdSanare.Core.csproj
@@ -2,12 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>28b3c55f-5a70-437f-b092-5dd0e8fbef41</UserSecretsId>
+    <ApplicationInsightsResourceId>/subscriptions/430a1619-be49-494c-9969-0c756da639d3/resourceGroups/adsanare-aplication-insight/providers/microsoft.insights/components/adsanare-ApIn</ApplicationInsightsResourceId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="4.5.2" />
     <PackageReference Include="bootstrap.sass" Version="4.5.2" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
