--- a/AdSanare.Core/appsettings.json
+++ b/AdSanare.Core/appsettings.json
@@ -7,8 +7,11 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "AdSanare": "Data Source=desktop-gnkjsj7\\sqlexpress;Initial Catalog=AdSanare;Integrated Security=True; MultipleActiveResultSets=true;",
-        "AdSanareUsuarios": "Data Source=desktop-gnkjsj7\\sqlexpress;Initial Catalog=AdSanareUsuarios;Integrated Security=True; MultipleActiveResultSets=true;"
-    }
+  "ConnectionStrings": {
+    "AdSanare": "Data Source=desktop-gnkjsj7\\sqlexpress;Initial Catalog=AdSanare;Integrated Security=True; MultipleActiveResultSets=true;",
+    "AdSanareUsuarios": "Data Source=desktop-gnkjsj7\\sqlexpress;Initial Catalog=AdSanareUsuarios;Integrated Security=True; MultipleActiveResultSets=true;"
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "b36c4e3a-86b6-4a80-aeb6-66761830deb3"
+  }
 }
