--- a/AdSanare.Core/appsettings.json
+++ b/AdSanare.Core/appsettings.json
@@ -8,10 +8,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AdSanare": "Data Source=desktop-gnkjsj7\\sqlexpress;Initial Catalog=AdSanare;Integrated Security=True; MultipleActiveResultSets=true;",
-    "AdSanareUsuarios": "Data Source=desktop-gnkjsj7\\sqlexpress;Initial Catalog=AdSanareUsuarios;Integrated Security=True; MultipleActiveResultSets=true;"
+    "AdSanare": "Data Source=localhost\\;Initial Catalog=AdSanare;Integrated Security=True; MultipleActiveResultSets=true;",
+    "AdSanareUsuarios": "Data Source=localhost\\;Initial Catalog=AdSanareUsuarios;Integrated Security=True; MultipleActiveResultSets=true;"
   },
   "ApplicationInsights": {
-    "InstrumentationKey": "b36c4e3a-86b6-4a80-aeb6-66761830deb3"
+    "InstrumentationKey": "267ceaa0-fc93-4dce-a5f5-a8d570b687e6"
   }
 }
