--- a/AdSanare.Core/AdSanare.Core.csproj
+++ b/AdSanare.Core/AdSanare.Core.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.0.0" />
+    <PackageReference Include="Azure.Identity" Version="1.1.1" />
     <PackageReference Include="bootstrap" Version="4.5.2" />
     <PackageReference Include="bootstrap.sass" Version="4.5.2" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
