--- a/AdSanare.Context/AdSanare.Context.csproj
+++ b/AdSanare.Context/AdSanare.Context.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20201026141820_mig5.cs" />
+    <Compile Remove="Migrations\20201026141820_mig5.Designer.cs" />
+    <Compile Remove="Migrations\20201026182333_mig6.cs" />
+    <Compile Remove="Migrations\20201026182333_mig6.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.7" />
