--- a/AdSanare.Core/appsettings.json
+++ b/AdSanare.Core/appsettings.json
@@ -7,10 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "AdSanare": "Data Source=localhost\\;Initial Catalog=AdSanare;Integrated Security=True; MultipleActiveResultSets=true;",
-    "AdSanareUsuarios": "Data Source=localhost\\;Initial Catalog=AdSanareUsuarios;Integrated Security=True; MultipleActiveResultSets=true;"
-  },
+    "ConnectionStrings": {
+        "AdSanare": "Data Source=desktop-gnkjsj7\\sqlexpress;Initial Catalog=AdSanare;Integrated Security=True; MultipleActiveResultSets=true;",
+        "AdSanareUsuarios": "Data Source=desktop-gnkjsj7\\sqlexpress;Initial Catalog=AdSanareUsuarios;Integrated Security=True; MultipleActiveResultSets=true;"
+    },
   "ApplicationInsights": {
     "InstrumentationKey": "267ceaa0-fc93-4dce-a5f5-a8d570b687e6"
   }
