--- a/AdSanare.Core/AdSanare.Core.csproj
+++ b/AdSanare.Core/AdSanare.Core.csproj
@@ -51,4 +51,6 @@
     </Content>
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
