--- a/AdSanare.Logic.Tests/AdSanare.Logic.Tests.csproj
+++ b/AdSanare.Logic.Tests/AdSanare.Logic.Tests.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AdSanare.Context\AdSanare.Context.csproj" />
+    <ProjectReference Include="..\AdSanare.Core\AdSanare.Core.csproj" />
     <ProjectReference Include="..\AdSanare.Entities\AdSanare.Entities.csproj" />
     <ProjectReference Include="..\AdSanare.Logic.Interfaces\AdSanare.Logic.Interfaces.csproj" />
     <ProjectReference Include="..\AdSanare.Logic\AdSanare.Logic.csproj" />
